bin_SCRIPTS = oh3c
oh3c:
	echo "#!$(PYTHON) $(pkgpythondir)/oh3c.py" > $@

python_PYTHON = $(NULL)
pkgpython_PYTHON = $(NULL)
pkgpython_PYTHON += oh3c.py
pkgpython_PYTHON += __init__.py
pkgpython_PYTHON += eapauth.py
pkgpython_PYTHON += eappacket.py
pkgpython_PYTHON += macmgr.py
pkgpython_PYTHON += usermgr.py

